generator modifier : factorized polynomial don't work properly #96195

Closed
opened 2022-03-06 13:04:20 +01:00 by hamza.SMA · 11 comments

System Information
Operating system: Windows-10-10.0.19043-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1050/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 472.39

Blender Version
Broken: version: 3.0.1, branch: master, commit date: 2022-01-25 17:19, hash: dc2d180181
Worked: (newest version of Blender that worked as expected)

Short description of error
when we increase number of of order by 3 it will create 4 times (Ax+b) lines instead of 3 but the graphe show polynomial curve of third degree thought ...
image.png
image.png

what i found that the value of coeficient "A" of the forth (factor) line is the value "B" of the third (factor) line and that because when we change one of them the other also change and take the same number...
image.png
also angaint the value of coeficient "A" of the third (factor) line is the value "B" of the second (factor) line and that because when we change one of them the other also change and take the same number...
and that happen avery time we increase by one it add two line again ..
image.png
Exact steps for others to reproduce the error

  • add keyframe
  • apply generator modifier
  • chose factorised polynomiale
  • increase by 3
    ( bom 4 lines the issue hapen
  • by 4 (bom 6 lines) .....
**System Information** Operating system: Windows-10-10.0.19043-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1050/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 472.39 **Blender Version** Broken: version: 3.0.1, branch: master, commit date: 2022-01-25 17:19, hash: `dc2d180181` Worked: (newest version of Blender that worked as expected) **Short description of error** when we increase number of of order by 3 it will create 4 times (Ax+b) lines instead of 3 but the graphe show polynomial curve of third degree thought ... ![image.png](https://archive.blender.org/developer/F12899357/image.png) ![image.png](https://archive.blender.org/developer/F12899362/image.png) what i found that the value of coeficient "A" of the forth (factor) line is the value "B" of the third (factor) line and that because when we change one of them the other also change and take the same number... ![image.png](https://archive.blender.org/developer/F12899360/image.png) also angaint the value of coeficient "A" of the third (factor) line is the value "B" of the second (factor) line and that because when we change one of them the other also change and take the same number... and that happen avery time we increase by one it add two line again .. ![image.png](https://archive.blender.org/developer/F12899375/image.png) **Exact steps for others to reproduce the error** - add keyframe - apply generator modifier - chose factorised polynomiale - increase by 3 ( bom 4 lines the issue hapen - by 4 (bom 6 lines) .....
Author

Added subscriber: @hamza-el-barmaki

Added subscriber: @hamza-el-barmaki

Added subscriber: @Ethan-Hall

Added subscriber: @Ethan-Hall
Ethan-Hall self-assigned this 2022-03-06 23:05:32 +01:00

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Simple mistake: For loop that generates the UI uses i++ instead of i+=2
Fix: https://developer.blender.org/D14254

Simple mistake: For loop that generates the UI uses i++ instead of i+=2 Fix: https://developer.blender.org/D14254
Author

In #96195#1317730, @Ethan-Hall wrote:
Simple mistake: For loop that generates the UI uses i++ instead of i+=2
Fix: https://developer.blender.org/D14254

i found another issue about that if we want to change representation from "factorized" to expanded the graphe change due to changing in coefficient places .... image.png after switching to expand image.png

> In #96195#1317730, @Ethan-Hall wrote: > Simple mistake: For loop that generates the UI uses i++ instead of i+=2 > Fix: https://developer.blender.org/D14254 i found another issue about that if we want to change representation from "factorized" to expanded the graphe change due to changing in coefficient places .... ![image.png](https://archive.blender.org/developer/F12899997/image.png) after switching to expand ![image.png](https://archive.blender.org/developer/F12899999/image.png)

In #96195#1317734, @hamza-el-barmaki wrote:
i found another issue about that if we want to change reprosentation from "factorized" to expanded the graphe change due changing in coefficient places

@hamza-el-barmaki That is not a bug. It is just a missing feature. You can make feature requests on: https://blender.community/c/rightclickselect/

> In #96195#1317734, @hamza-el-barmaki wrote: > i found another issue about that if we want to change reprosentation from "factorized" to expanded the graphe change due changing in coefficient places @hamza-el-barmaki That is not a bug. It is just a missing feature. You can make feature requests on: https://blender.community/c/rightclickselect/

Added subscriber: @ThomasDinges

Added subscriber: @ThomasDinges

@ThomasDinges Do you consider this a high priority to fix?
This fix also needs to be applied to 2.9 LTS.

@ThomasDinges Do you consider this a high priority to fix? This fix also needs to be applied to 2.9 LTS.

This issue was referenced by fe6999352a

This issue was referenced by fe6999352a8d0aad134645f9a67188e45a30d18a

This issue was referenced by 60481e4d99

This issue was referenced by 60481e4d99920d28c840342c0b27fa083dd4ffd9

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#96195
No description provided.