Fix T96195: f-curve factorized polynomial generator broken UI

The polynomial parameters were not shown correctly.

Differential Revision: https://developer.blender.org/D14254